Fix margin on mobile#1

--- a/src/index.css
+++ b/src/index.css
@@ -17,39 +17,7 @@
     --guanine-sub-color: #4a9c48;
 }
 
-/*region title*/
-.title_container {
-    margin: auto;
-    display: flex;
-    flex-direction: column;
 
-}
-
-.title_header {
-    font-size: calc(var(--font-size) + 10px);
-    color: white;
-    background: rgba(0, 0, 0, 0.5);
-    border: 4px solid var(--accent);
-    border-radius: 16px;
-    padding: 4px;
-    text-align: center;
-    width: fit-content;
-    align-self: center;
-}
-
-.title_text {
-    color: white;
-    background: rgba(0, 0, 0, 0.5);
-    border: 4px solid gray;
-    border-radius: 16px;
-    padding: 4px;
-
-    text-align: center;
-    width: 50vw;
-    max-width: calc(72vw - 80px);
-}
-
-/*endregion*/
 * {
     font-size: var(--font-size);
 }
